depoyment-kineton/deployment-yaml-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kamp
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http 
  selector:
    app: kamp
  type: ClusterIP
